# interpreter

./: '  -  .gitignore  ;  Cargo.toml  README.md  err.txt  fibonacci.monkey  file.txt  macro.monkey  t2.txt  test  test.monkey  text.txt
lsp-monkey/: Cargo.toml  README.md  test_message.txt
lsp-monkey/scripts/: test_message.txt
lsp-monkey/src/: main.rs  types.rs
lsp-monkey/src/server/: error.rs  mod.rs
lsp-monkey/src/types/: annotations.rs  base.rs  capabilities.rs  error_codes.rs  filesystem.rs  initialize.rs  kinds.rs  lsp.rs  message.rs  mod.rs  progress.rs  results.rs  symbols.rs  temp.txt  workspace.rs
lsp-monkey/src/types/uri/: error.rs  mod.rs
monkey/: Cargo.toml  README.md
monkey/examples/: fibonacci.monkey
monkey/src/: lexer.rs  lib.rs  main.rs  token.rs  utils.rs
monkey/src/code/: mod.rs
monkey/src/compiler/: symbol_table.rs
monkey/src/monkey/: mod.rs
monkey/src/object/: environment.rs  error.rs  mod.rs
monkey/src/parser/: mod.rs  precedence.rs
monkey/src/vm/: frame.rs
monkey/web/: bun.lockb  declarations.d.ts  tailwind.config.js  tsconfig.json
monkey/web/src/lib/pkg/: interpreter.d.ts  interpreter.js  package.json
monkey/web/src/routes/: +page.svelte
src/: ast.rs  code.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  wasm.rs
src/ast/: ast.rs  mod.rs
src/code/: error.rs  mod.rs
src/compiler/: error.rs  mod.rs  symbol_table.rs
src/evaluator/: builtin.rs  environment.rs  error.rs  mod.rs  object.rs
src/lexer/: lexer.rs  mod.rs
src/monkey/: mod.rs
src/object/: builtin.rs  mod.rs
src/parser/: ast.rs  errors.rs  mod.rs  precedence.rs
src/repl/: mod.rs
src/token/: mod.rs
src/vm/: error.rs  frame.rs  mod.rs
tree-sitter-monkey/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  simple.monkey  test.monkey  tree-sitter.json
tree-sitter-monkey/bindings/c/: tree-sitter-monkey.h  tree-sitter-monkey.pc.in
tree-sitter-monkey/bindings/go/: binding.go  binding_test.go
tree-sitter-monkey/bindings/node/: binding.cc
tree-sitter-monkey/bindings/python/tests/: test_binding.py
tree-sitter-monkey/bindings/python/tree_sitter_monkey/: __init__.py  binding.c
tree-sitter-monkey/bindings/rust/: build.rs  lib.rs
tree-sitter-monkey/bindings/swift/TreeSitterMonkeyTests/: TreeSitterMonkeyTests.swift
tree-sitter-monkey/queries/: highlights.scm  locals.scm
tree-sitter-monkey/src/: grammar.json  node-types.json  parser.c
web/: bun.lockb  package.json  vite.config.ts
web/src/lib/pkg/: README.md  interpreter_bg.wasm  interpreter_bg.wasm.d.ts
web/src/routes/: +page.svelte
