[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.46"
users = "0.11.0"
wasm-bindgen = "0.2.87"


[[bin]]
name = "repl"
path = "src/bin/repl.rs"


