[package]
name = "monkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.46"
wasm-bindgen = "0.2.87"
clap = { version = "4.3.1", features = ["derive", "cargo"] }
byteorder = "1.5.0"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

