[package]
name = "lsp-monkey"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
jsonrpc-core = "18.0.0"
jsonrpc-stdio-server = "18.0.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }

