[package]
name = "tree-sitter-monkey"
description = "T ree-sitter parser for the Monkey programming language from Thorsten Bal"
version = "0.1.0"
authors = ["0xcacti"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "monkey"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/0xcacti/interpreter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
